CSS: Fix cut of text popup content
The overflow that was removed in 72f8fd971dfae775e2416ee7b74cb04e0e52700a did cut off long URLs and such which where now visible overflowing the popup content. However, we do want the visible but using `break-word`.

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -1297,6 +1297,7 @@ a.add-datalayer:hover,
 .umap-popup-container {
     flex-grow: 1;
     padding: 0 10px;
+    word-break: break-word;
 }
 .leaflet-popup-content h3 {
     margin-bottom: 0;
